--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </a>
                         <span class="qty-info">5</span>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="bag-item">
                         <a href="#" class="nav-link">
                             <i class="bi bi-bag"></i>
                             <b>R$ 1290,12</b>
