--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg primary-bg-color py-4 px-2" id="navbar"> <!-- py é o padding no eixo y e px é o padding no eixo x -->
         <div class="container">
             <a href="#" class="navbar-brand">ExactTime</a>
-            <div class="navbar-items">
+            <div id="navbar-items">
                 <div></div>
                 <form class="d-flex" id="search-form">
                     <i class="bi bi-search primary-color"></i>
@@ -52,6 +52,15 @@
                     </li>
                 </ul>
             </div>
+        </div>
+    </nav>
+
+    <!-- Bottom Navbar -->
+    <nav class="navbar navbar-expand-lg secondary-bg-color p-2" id="bottom-navbar-container">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="bottom-navbar" aria-controls="bottom-navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="bi bi-list"></i>
+            </button>
         </div>
     </nav>
 </body>
