--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,9 @@
     <!-- Fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Special+Elite&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Special+Elite&display=swap"
+        rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <!-- Bootstrap JS -->
@@ -19,16 +22,19 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg primary-bg-color py-4 px-2" id="navbar"> <!-- py é o padding no eixo y e px é o padding no eixo x -->
+    <nav class="navbar navbar-expand-lg primary-bg-color py-4 px-2" id="navbar">
+        <!-- py é o padding no eixo y e px é o padding no eixo x -->
         <div class="container">
             <a href="#" class="navbar-brand">ExactTime</a>
             <div id="navbar-items">
                 <div></div>
                 <form class="d-flex" id="search-form">
                     <i class="bi bi-search primary-color"></i>
-                    <input type="search" class="form-control me-2" placeholder="Busque o seu relógio..." aria-label="Search">
+                    <input type="search" class="form-control me-2" placeholder="Busque o seu relógio..."
+                        aria-label="Search">
                     <button class="btn secondary-bg-color" type="submit">Pesquisar</button>
                 </form>
                 <ul class="navbar-nav mb-2 mb-lg-0">
@@ -58,10 +64,57 @@
     <!-- Bottom Navbar -->
     <nav class="navbar navbar-expand-lg secondary-bg-color p-2" id="bottom-navbar-container">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="bottom-navbar" aria-controls="bottom-navbar" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#bottom-navbar" aria-controls="bottom-navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="bi bi-list"></i>
             </button>
+            <ul class="navbar-nav mb-2 mb-lg-0 collapse navbar-collapse" id="bottom-navbar">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Produtos</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Promoções</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Contato</a>
+                </li>
+            </ul>
         </div>
     </nav>
+    <!-- FIM NAVBAR -->
+    <!-- BANNERS -->
+    <div class="container" id="banners-container">
+        <div class="carousel slide" id="slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/img/relogio_banner1.jpg" alt="banner 1" class="d-block w-100 img-fluid">
+                    <div class="carousel-caption primary-bg-color">
+                        <h5>Relogios de Luxo</h5>
+                        <p>Para você estar pronto em qualquer situação.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="/img/relogio_banner2.jpg" alt="banner 2" class="d-block w-100 img-fluid">
+                    <div class="carousel-caption primary-bg-color">
+                        <h5>Linha Importada</h5>
+                        <p>Conheça os melhores relogios suiços, com pronta entrega.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#slide" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#slide" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
 </body>
 </html>
