--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <div class="container" id="mini-banners">
+            <div class="row justify-content-around">
+                <div class="col-12 dark-bg-color" id="mini-banner-1">
+                    <h2>Nova Coleção</h2>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
