--- a/index.html
+++ b/index.html
@@ -119,6 +119,18 @@
             <div class="row justify-content-around">
                 <div class="col-12 dark-bg-color" id="mini-banner-1">
                     <h2>Nova Coleção</h2>
+                    <img src="/img/relogio-3.png" alt="Relógio 3">
+                    <a href="#">Compre Agora</a>
+                </div>
+                <div class="col-12 secondary-bg-color" id="mini-banner-2">
+                    <h2>Promoções</h2>
+                    <img src="/img/relogio-5.png" alt="Relógio 5">
+                    <a href="#">Compre Agora</a>
+                </div>
+                <div class="col-12 light-bg-color" id="mini-banner-3">
+                    <h2 class="secondary-color">Edição Limitada</h2>
+                    <img src="/img/relogio-7.png" alt="Relógio 7">
+                    <a href="#">Compre Agora</a>
                 </div>
             </div>
         </div>
