--- a/index.html
+++ b/index.html
@@ -135,5 +135,17 @@
             </div>
         </div>
     </div>
+
+    <!-- BEST SELLERS -->
+    <div class="container" id="best-sellers">
+        <h2 class="title primary-color">Best Sellers</h2>
+        <div class="row">
+            <div class="col-12 col-md-3">
+                <div class="card primary-bg-color">
+                    <img src="/img/" alt="" class="card-img-top img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
