--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </nav>
 
-    <!-- Bottom Navbar -->
+    <!-- BOOTOM NAVBAR -->
     <nav class="navbar navbar-expand-lg secondary-bg-color p-2" id="bottom-navbar-container">
         <div class="container">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#bottom-navbar" aria-controls="bottom-navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -142,8 +142,62 @@
         <div class="row">
             <div class="col-12 col-md-3">
                 <div class="card primary-bg-color">
-                    <img src="/img/" alt="" class="card-img-top img-fluid">
+                    <img src="/img/relogio-8.png" alt="Relógio 8" class="card-img-top img-fluid">
+                    <div class="card-body">
+                        <p class="card-category secondary-color">Relógio</p>
+                        <h5 class="card-title">Nome do Produto</h5>
+                        <p class="card-text primary-color">R$177,65</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
+                    </div>
                 </div>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="card primary-bg-color">
+                    <img src="/img/relogio-3.png" alt="Relógio 3" class="card-img-top img-fluid">
+                    <div class="card-body">
+                        <p class="card-category secondary-color">Relógio</p>
+                        <h5 class="card-title">Nome do Produto</h5>
+                        <p class="card-text primary-color">R$177,65</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="card primary-bg-color">
+                    <img src="/img/relogio-5.png" alt="Relógio 5" class="card-img-top img-fluid">
+                    <div class="card-body">
+                        <p class="card-category secondary-color">Relógio</p>
+                        <h5 class="card-title">Nome do Produto</h5>
+                        <p class="card-text primary-color">R$177,65</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-3">
+                <div class="card primary-bg-color">
+                    <img src="/img/relogio-7.png" alt="Relógio 7" class="card-img-top img-fluid">
+                    <div class="card-body">
+                        <p class="card-category secondary-color">Relógio</p>
+                        <h5 class="card-title">Nome do Produto</h5>
+                        <p class="card-text primary-color">R$177,65</p>
+                        <a href="#" class="btn btn-primary">Comprar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- BANNER DESTAQUE -->
+    <div class="container-fluid" id="bottom-banner">
+        <div class="row">
+            <div class="col-12 col-md-8">
+                <p class="primary-color offer-subtitle">Desconto de até 75%</p>
+                <h2 class="light-color">Relógio X</h2>
+                <p class="secondary-color">Presentei seu amor com este relógio luxuoso</p>
+                <a href="#" class="btn btn-primary">Comprar Agora</a>
+            </div>
+            <div class="col-12 col-md-4">
+                <img src="/img/relogio-7.png" alt="Relógio X">
             </div>
         </div>
     </div>
