--- a/index.html
+++ b/index.html
@@ -201,5 +201,86 @@
             </div>
         </div>
     </div>
+    <!-- PRODUTOS NOVOS -->
+    <div class="container" id="new-products">
+        <h2 class="title primary-color">Novidades</h2>
+        <div class="row">
+            <div class="col-12 col-md-3 d-none d-md-flex" id="new-products-banner">
+                <p class="secondary-color">Os melhores</p>
+                <h3>Relogios</h3>
+                <p class="primary-color">Os melhores preços</p>
+            </div>
+            <div class="col-12 col-md-9">
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="/img/relogio-3.png" alt="Relógio 3" class="card-img-top img-fluid">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title">Nome do Produto</h5>
+                                <p class="card-text primary-color">R$177,65</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="/img/relogio-7.png" alt="Relógio 7" class="card-img-top img-fluid">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title">Nome do Produto</h5>
+                                <p class="card-text primary-color">R$177,65</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="/img/relogio-5.png" alt="Relógio 5" class="card-img-top img-fluid">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title">Nome do Produto</h5>
+                                <p class="card-text primary-color">R$177,65</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="/img/relogio-8.png" alt="Relógio 8" class="card-img-top img-fluid">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title">Nome do Produto</h5>
+                                <p class="card-text primary-color">R$177,65</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="/img/relogio-3.png" alt="Relógio 3" class="card-img-top img-fluid">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title">Nome do Produto</h5>
+                                <p class="card-text primary-color">R$177,65</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <div class="card primary-bg-color">
+                            <img src="/img/relogio-7.png" alt="Relógio 7" class="card-img-top img-fluid">
+                            <div class="card-body">
+                                <p class="card-category secondary-color">Relógio</p>
+                                <h5 class="card-title">Nome do Produto</h5>
+                                <p class="card-text primary-color">R$177,65</p>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>             
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
