--- a/index.html
+++ b/index.html
@@ -282,5 +282,18 @@
             </div>
         </div>
     </div>
+    
+
+    <!-- GALERIA -->
+    <div class="container-fluid" id="gallery">
+        <div class="row">
+            <div class="col-6 col-md-2 image-container" id="insta1"></div>
+            <div class="col-6 col-md-2 image-container" id="insta2"></div>
+            <div class="col-6 col-md-2 image-container" id="insta3"></div>
+            <div class="col-6 col-md-2 image-container" id="insta4"></div>
+            <div class="col-6 col-md-2 image-container" id="insta5"></div>
+            <div class="col-6 col-md-2 image-container" id="insta6"></div>
+        </div>
+    </div>
 </body>
 </html>
