--- a/index.html
+++ b/index.html
@@ -295,5 +295,35 @@
             <div class="col-6 col-md-2 image-container" id="insta6"></div>
         </div>
     </div>
+
+    <!-- FOOTER -->
+    <footer id="footer">
+        <div class="container-fluid" id="footer-links-container">
+            <div class="row">
+                <div class="col-12 col-md-4">
+                    <h3>Paginas</h3>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="#" class="secondary-color">Home</a></li>
+                        <li class="mb-2"><a href="#" class="secondary-color">Categorias</a></li>
+                        <li class="mb-2"><a href="#" class="secondary-color">Promoções</a></li>
+                        <li class="mb-2"><a href="#" class="secondary-color">Contato</a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-md-4" id="footer-center">
+                    <h3>ExactTime</h3>
+                    <p class="secondary-color">Alguma duvida? Ligue para nos!</p>
+                    <p class="store-phone"><i class="bi bi-telephone"></i>(50) 99999-99999</p>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h3>Informações</h3>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="#" class="secondary-color">Politica de Privacidade</a></li>
+                        <li class="mb-2"><a href="#" class="secondary-color">Politica de Entrega</a></li>
+                        <li class="mb-2"><a href="#" class="secondary-color">Rastreie o seu pedido</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
