--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <a href="#" class="btn btn-primary">Comprar Agora</a>
             </div>
             <div class="col-12 col-md-4">
-                <img src="/img/relogio-7.png" alt="Relógio X">
+                <img src="/img/Design sem nome.png" alt="Relógio X">
             </div>
         </div>
     </div>
@@ -225,7 +225,7 @@
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="card primary-bg-color">
-                            <img src="/img/relogio-7.png" alt="Relógio 7" class="card-img-top img-fluid">
+                            <img src="/img/Design sem nome.png" alt="Relógio 7" class="card-img-top img-fluid">
                             <div class="card-body">
                                 <p class="card-category secondary-color">Relógio</p>
                                 <h5 class="card-title">Nome do Produto</h5>
@@ -269,7 +269,7 @@
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="card primary-bg-color">
-                            <img src="/img/relogio-7.png" alt="Relógio 7" class="card-img-top img-fluid">
+                            <img src="/img/Design sem nome.png" alt="Relógio 7" class="card-img-top img-fluid">
                             <div class="card-body">
                                 <p class="card-category secondary-color">Relógio</p>
                                 <h5 class="card-title">Nome do Produto</h5>
@@ -298,7 +298,7 @@
 
     <!-- FOOTER -->
     <footer id="footer">
-        <div class="container-fluid" id="footer-links-container">
+        <div class="container-fluid footer-column" id="footer-links-container">
             <div class="row">
                 <div class="col-12 col-md-4">
                     <h3>Paginas</h3>
@@ -312,7 +312,7 @@
                 <div class="col-12 col-md-4" id="footer-center">
                     <h3>ExactTime</h3>
                     <p class="secondary-color">Alguma duvida? Ligue para nos!</p>
-                    <p class="store-phone"><i class="bi bi-telephone"></i>(50) 99999-99999</p>
+                    <p class="store-phone"><i class="bi bi-telephone"></i> (50) 99999-9999</p>
                 </div>
                 <div class="col-12 col-md-4">
                     <h3>Informações</h3>
@@ -323,6 +323,29 @@
                     </ul>
                 </div>
             </div>
+        </div>
+
+        <div class="container-fluid dark-bg-color" id="newsletter-container">
+            <div class="col-12">
+                <div class="row">
+                    <p class="secondary-color">Se inscreva na nossa Newsletter:</p>
+                    <form class="d-flex" id="news-form">
+                        <i class="bi bi-envelope primary-color"></i>
+                        <input type="email" class="form-control me-2" placeholder="Insira seu e-mail">
+                        <button class="btn secondary-bg-color" type="submit">Enviar</buttton>
+                    </form>
+                </div>
+            </div>
+            <div class="col-12" id="social-container">
+                <i class="bi bi-facebook"></i>
+                <i class="bi bi-instagram"></i>
+                <i class="bi bi-youtube"></i>
+                <i class="bi bi-twitter"></i>
+            </div>
+        </div>
+
+        <div class="container" id="copy-container">
+            <p>Todos direitos reservados @2022 <span class="primary-color">ExactTime</span> - A sua loja de relógios</p>
         </div>
     </footer>
 </body>
